total html y css

--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,33 @@
 
 
     <!-- FORM CONTACT -->
-    <section>
 
-    </section>
+<h1 class="text-contact">Contact us</h1>
+<form action="/some-url" method="post">
+  <label for="name">Full Name*</label><br>
+  <input type="text" class="placeholder1" placeholder="Enter your full name"><br>
+
+  <div class="flex">
+    <div>
+  <label for="email">Email</label><br>
+  <input type="email" class="email1" placeholder="Enter your email"><br>
+  </div>
+  <div>
+  <label for="phone">Phone</label>
+  <input type="number" class="email1" placeholder="Enter your Phone">
+  </div>
+  </div>
+  <br>
+  <label for="textarea">Message*</label><br>
+  <textarea class="textarea" id="comment" name="comment" rows="15" cols="174"  ></textarea>
+
+  <input type="submit" value="Submit" class="submit">
+  
+</form>
+
+
+
+
 
 <!-- FOOTER -->
 <footer id="footer">
@@ -54,6 +78,6 @@
       </div>
     </footer>
 
-<script type="text/javascript" src="./index.js"></script>
+<script type="text/javascript" src="./contact.js"></script>
 </body>
 </html>
