--- a/project.html
+++ b/project.html
@@ -150,7 +150,7 @@
     </footer>
 
 
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./project.js"></script>
     
 </body>
 </html>
