--- a/project.html
+++ b/project.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Project</title>
 </head>
 <body>
         <!-- NAV SECTION -->
-    <nav id="nav">
+ <nav id="nav">
       <div>
         <img src="./Información de Proyecto/logos/circle.svg" alt="Circle logo">
       </div>
       <div>
         <ul class="nav-bar-ul">
-          <li>Home</li>
-          <li>Projects</li>
-          <li>Services</li>
+          <li><a class="text-li" href="#">Home</a></li>
+          <li><a class="text-li1"href="#">Projects</a></li>
+          <li><a class="text-li1" href="#">Services</a></li>
         </ul>
       </div>
-      <div >
+      <span >
         <a href="#">Contact Us</a>
-      </div>
+      </span>
 
     </nav>
 
