--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+ 
     <!-- NAV SECTION -->
     <nav id="nav" class="navbar">
       <div>
-        <img src="./Información de Proyecto/logos/circle.svg" alt="Circle logo">
+        <img src="Información de Proyecto/logos/circle.svg" alt="Circle logo">
+        <img src=".
       </div>
       <div>
         <ul class="nav-bar-ul">
