--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- NAV SECTION -->
     <nav id="nav" class="navbar">
       <div>
-        <img src="Información de Proyecto/logos/circle.svg" alt="Circle logo">
+        <img src="./Información de Proyecto/logos/circle.svg" alt="Circle logo">
         <img src=".
       </div>
       <div>
