--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <!-- NAV SECTION -->
  <nav id="nav">
       <div>
-      <a href="index.html">  <img src="./Información de Proyecto/logos/circle.svg" alt="Circle logo"></a>
+      <a href="index.html">  <img src="./imgs/logos/circle.svg" alt="Circle logo"></a>
       </div>
       <div>
         <ul class="nav-bar-ul">
@@ -57,7 +57,7 @@
 <!-- FOOTER -->
 <footer id="footer">
       <div>
-        <img src="./Información de Proyecto/logos/circle.svg" alt="Circle image">
+        <img src="./imgs/logos/circle.svg" alt="Circle image">
         <address>2972 Westheimer Rd. Santa Ana,</br>Illinois 85486</address>
       </div>
 
