--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
         <!-- NAV SECTION -->
  <nav id="nav">
       <div>
-        <img src="./Información de Proyecto/logos/circle.svg" alt="Circle logo">
+        <img src="./imgs/logos/circle.svg" alt="Circle logo">
       </div>
       <div>
         <ul class="nav-bar-ul">
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div>
-            <img src="./Información de Proyecto/projects-section/1.jpg" alt="">
+            <img src="./imgs/projects-section/1.jpg" alt="">
         </div>
         <div>
             <h2 class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo fermentum ipsum ut vehicula. Aenean sed ipsum volutpat, ullamcorper sapien sed, fringilla enim. Vestibulum in turpis venenatis libero aliquam dapibus. Aliquam erat volutpat. Donec viverra elit sit amet purus ornare, ac placerat eros vestibulum. Nullam sodales nunc vel ipsum feugiat feugiat. Cras nec nisi vel orci elementum feugiat ac sollicitudin metus. In pharetra diam vel mattis mollis. Fusce a dui libero. Sed imperdiet quam iaculis ante pulvinar semper. Nullam volutpat dolor enim, a imperdiet sapien blandit sed. Maecenas in feugiat sapien. Suspendisse rhoncus vestibulum nibh, a commodo nisl aliquam laoreet. Donec bibendum lorem quis velit egestas, vel elementum tortor interdum. Proin rhoncus fermentum nibh, nec lobortis libero. Curabitur cursus libero vitae sagittis fermentum.</h2>
@@ -51,7 +51,7 @@
       <div>
         <article class="tarjeta">
           <div>
-          <img src="./Información de Proyecto/projects-section/4.jpg" 
+          <img src="./imgs/projects-section/4.jpg" 
           alt="section 4">
           </div>
 
@@ -69,7 +69,7 @@
 
         <article class="tarjeta">
           <div>
-          <img src="./Información de Proyecto/projects-section/5.jpg" 
+          <img src="./imgs/projects-section/5.jpg" 
           alt="section 5">
           </div>
 
@@ -87,7 +87,7 @@
 
         <article class="tarjeta">
           <div>
-          <img src="./Información de Proyecto/projects-section/6.jpg" 
+          <img src="./imgs/projects-section/6.jpg" 
           alt="section 6">
           </div>
 
@@ -129,7 +129,7 @@
 
         <footer id="footer">
       <div>
-        <img src="./Información de Proyecto/logos/circle.svg" alt="Circle image">
+        <img src="./imgs/logos/circle.svg" alt="Circle image">
         <address>2972 Westheimer Rd. Santa Ana,</br>Illinois 85486</address>
       </div>
 
