--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <!-- NAV SECTION -->
     <nav id="nav" class="navbar">
       <div>
-        <img src="./imgs/logos/circle.svg" alt="Circle logo">
+       <a href="index.html"> <img src="./imgs/logos/circle.svg" alt="Circle logo"></a>
   
       </div>
       <div>
         <ul class="nav-bar-ul">
 
-          <li ><a class="text-li" href="#">Home</a>
+          <li ><a class="text-li" href="index.html">Home</a>
           </li>
 
-          <li><a class="text-li1"href="project.html">Projects</a>
+          <li><a class="text-li1" href="project.html">Projects</a>
           </li>
 
-          <li><a class="text-li1" href="#">Services</a>
+          <li><a class="text-li1" href="#services">Services</a>
           </li>
         </ul>
       </div>
