--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <li><a class="text-li1" href="project.html">Projects</a>
           </li>
 
-          <li><a class="text-li1" href="#services">Services</a>
+          <li><a class="text-li1" href="index.html">Services</a>
           </li>
         </ul>
       </div>
