--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <!-- HEADER: HERO SECTION -->
     <header id="header">
       <div class="container-hero">
-        <article>
-          <h1>Empower Your </br> Business With </br> Stunning Design</h1>
-          <p>Circle is a digital design and development studio.</br> We design and develop astonishing websites </br> and mobile apps</p>
+        <article class="hero-content">
+          <h1 class="heading-2">Empower Your </br> Business With </br> Stunning Design</h1>
+          <p class="heading-2">Circle is a digital design and development studio.</br> We design and develop astonishing websites </br> and mobile apps</p>
           <div>
           <a class="touch" href="#">See Our Work</a>
           <a class="button" href="#">Get in touch</a>
