final con responsive

--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
     <!-- SECTION 2: PROJECTS SECTION -->
     <section id="projects">
       <h2>Other Projects</h2>
-      <div>
+      <div id="project">
         <article class="tarjeta">
           <div>
           <img src="./imgs/projects-section/4.jpg" 
